--- a/templates/home/allProducts.html.twig
+++ b/templates/home/allProducts.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ludo et Sophie Accueil{% endblock %}
+{% block head %}
+	
+	<meta name="description" content="Visites guidées, scolaires, tous publics; Tous les évènements proposés par Ludo & Sophie">
+{% endblock %}
+
+{% block title %}Visites guidées, scolaires, tous publics; Tous les évènements proposés par Ludo & Sophie{% endblock %}
 
 {% block body %}
 
