--- a/templates/home/faq.html.twig
+++ b/templates/home/faq.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block head %}
+	
+	<meta name="description" content="Page dédiée aux questions souvent posées.">
+{% endblock %}
+
 {% block title %}Ludo et Sophie - Foire aux Questions
 {% endblock %}
 
