--- a/templates/home/people.html.twig
+++ b/templates/home/people.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block head %}
+	
+	<meta name="description" content="L'idée en tête, elles mûrissent progressivement le concept avec l'objectif de créer un “doublé d’heureux” : la ludo-culture pour les ***REMOVED***s, le plus simple et rassurant pour leurs parents et lancent l'agence et son club ***REMOVED***s en 2016.  Ludo & Sophie idéalement, ça aurait dû exister quand elles étaient petites, mais on n’en n’est pas si loin... les ***REMOVED***s, c’est une super excuse pour rester jeune ;-). Ludo&Sophie ne serait rien sans ses conférenciers, médiateurs scientifiques et animatrices encadrantes. Découvrez-les ici.">
+{% endblock %}
+
 {% block title %}Ludo et Sophie - Qui sommes-nous ?
 {% endblock %}
 
