--- a/templates/home/themes.html.twig
+++ b/templates/home/themes.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ludo et Sophie Accueil{% endblock %}
+{% block head %}
+	
+	<meta name="description" content="La ludo-culture tous azimuts : Arts, Sciences, Histoire, coulisses, ateliers créatifs... À vous de choisir !">
+{% endblock %}
+
+{% block title %}Ludo et Sophie - La ludo-culture tous azimuts : Arts, Sciences, Histoire, coulisses, ateliers créatifs... À vous de choisir !{% endblock %}
 
 {% block body %}
 
