--- a/templates/home/younglings.html.twig
+++ b/templates/home/younglings.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ludo et Sophie - L'équipe Petits Éclaireurs
+{% block head %}
+	<meta name="description" content="Ils ont entre 7 et 14 ans et sont “convoqués” régulièrement pour découvir de nouvelles activités avant qu'elles n'entrent dans nos programmes.
+Avec eux nous testons l'existant, tentons de l'améliorer si nécessaire ou nous créons de nouvelles ***REMOVED*** de toutes pièces.
+Ils sont les garants de la qualité pédagogique et ludique de nos ***REMOVED***. Merci à eux !">
+{% endblock %}
+
+{% block title %}Ludo et Sophie - Découvrez toute l'équipe des petits éclaireurs
 {% endblock %}
 
 {% block body %}
