--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -48,13 +48,13 @@
 						<th>
 							{{ knp_pagination_sortable(users, 'Email', 'email') }}
 						</th>
-						<th>
+						<th class="d-none d-sm-table-cell">
 							{{ knp_pagination_sortable(users, 'Prénom', 'firstname') }}
 						</th>
-						<th>
+						<th class="d-none d-md-table-cell">
 							{{ knp_pagination_sortable(users, 'Nom', 'lastname') }}
 						</th>
-						<th>
+						<th class="d-none d-lg-table-cell">
 							{{ knp_pagination_sortable(users, 'Roles', 'roles') }}
 						</th>
 						<th>
@@ -67,9 +67,9 @@
 					{% for user in users %}
 						<tr>
 							<td>{{ user.email }}</td>
-							<td>{{ user.firstname }}</td>
-							<td>{{ user.lastname }}</td>
-							<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+							<td class="d-none d-sm-table-cell">{{ user.firstname }}</td>
+							<td class="d-none d-md-table-cell">{{ user.lastname }}</td>
+							<td class="d-none d-lg-table-cell">{{ user.roles ? user.roles|json_encode : '' }}</td>
 							<td>
 								{{ user.pages|length }}
 								<a title="Voir les {{ user.pages|length }} publications de {{ user.firstname }}" href="{{ path('pages_index', {userId: user.id }) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
