--- a/templates/attributes/index.html.twig
+++ b/templates/attributes/index.html.twig
@@ -68,7 +68,7 @@
 						<th>
 							{{ knp_pagination_sortable(attributes, 'Contenu', 'value') }}
 						</th>
-						<th>
+						<th class="d-none d-md-table-cell">
 							{{ knp_pagination_sortable(attributes, 'Nombre de produits associés', 'products.count' ) }}
 						</th>
 						<th>actions</th>
@@ -85,7 +85,7 @@
 							</td>
 							<td>{{ attribute.value }}</td>
 
-							<td>{{ attribute.products | length }}
+							<td class="d-none d-md-table-cell">{{ attribute.products | length }}
 								{# {% if attribute.products | length > 0 %}
 									<a title="Voir les produits associés à cet attribut" href="{{ path('products_index', {attributeId:attribute.id}) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
 								{% endif %} #}
