--- a/templates/frequently_asked_questions/index.html.twig
+++ b/templates/frequently_asked_questions/index.html.twig
@@ -48,7 +48,7 @@
 						<th>
 							{{ knp_pagination_sortable(frequently_asked_questions, 'Question', 'question') }}
 						</th>
-						<th>
+						<th class="d-none d-md-table-cell">
 							{{ knp_pagination_sortable(frequently_asked_questions, 'Réponse', 'answer') }}
 						</th>
 						<th>actions</th>
@@ -58,7 +58,7 @@
 					{% for frequently_asked_question in frequently_asked_questions %}
 						<tr>
 							<td>{{ frequently_asked_question.question }}</td>
-							<td>{{ frequently_asked_question.answer }}</td>
+							<td class="d-none d-md-table-cell">{{ frequently_asked_question.answer }}</td>
 							<td>
 								<a href="{{ path('frequently_asked_questions_edit', {'id': frequently_asked_question.id}) }}" class="btn btn-warning" ><i class="fas fa-edit"></i></a>
                                 {{ include('frequently_asked_questions/_delete_form.html.twig') }}
