--- a/templates/languages/index.html.twig
+++ b/templates/languages/index.html.twig
@@ -45,20 +45,20 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th>Nom</th>
+						<th class="d-none d-sm-table-cell">Nom</th>
 						<th>Flag</th>
-						<th>Slug</th>
+						<th class="d-none d-md-table-cell">Slug</th>
 						<th>actions</th>
 					</tr>
 				</thead>
 				<tbody>
 					{% for language in languages %}
 						<tr>
-							<td>{{ language.name }}</td>
+							<td class="d-none d-sm-table-cell">{{ language.name }}</td>
 							<td>
 								<img src="{{ asset('images/languages/'~ language.flag ) | imagine_filter('miniatures') }}" alt="Drapeau associé à la langue {{ language.name }}">
 							</td>
-							<td>{{ (language.slug)?? language.slug }}</td>
+							<td class="d-none d-md-table-cell">{{ (language.slug)?? language.slug }}</td>
 							<td>
 								<a href="{{ path('languages_edit', {'id': language.id}) }}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
 								{{ include('languages/_delete_form.html.twig') }}
