--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -58,7 +58,7 @@
 					<tr>
 						<th>Note donnée pour le produit concerné</th>
 						<td>
-							{{ (comment.mark != null)?(comment.mark ~'/5'):'Pas de note donnée pour ce produit.' }}
+							{{ comment.mark ~'/5' }}
 						</td>					
 					</tr>
 					<tr>
