--- a/templates/home/allProducts.html.twig
+++ b/templates/home/allProducts.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block head %}
-	
-	<meta name="description" content="Visites guidées, scolaires, tous publics; Tous les évènements proposés par Ludo & Sophie">
+	<meta name="description" content="Visites guidées, scolaires, tous publics, ; Tous les évènements proposés par Ludo &amp; Sophie">
 {% endblock %}
 
-{% block title %}Visites guidées, scolaires, tous publics; Tous les évènements proposés par Ludo & Sophie{% endblock %}
+{% block title %}Visites guidées, scolaires, privées, tous publics - Ludo &amp; Sophie{% endblock %}
 
 {% block body %}
 
