--- a/templates/home/themes.html.twig
+++ b/templates/home/themes.html.twig
@@ -5,7 +5,7 @@
 	<meta name="description" content="La ludo-culture tous azimuts : Arts, Sciences, Histoire, coulisses, ateliers créatifs... À vous de choisir !">
 {% endblock %}
 
-{% block title %}Ludo et Sophie - La ludo-culture tous azimuts : Arts, Sciences, Histoire, coulisses, ateliers créatifs... À vous de choisir !{% endblock %}
+{% block title %}Ludo-culture, Arts, Sciences, Histoire, ateliers créatifs... - Ludo et Sophie{% endblock %}
 
 {% block body %}
 
