--- a/templates/home/younglings.html.twig
+++ b/templates/home/younglings.html.twig
@@ -6,7 +6,7 @@ Avec eux nous testons l'existant, tentons de l'améliorer si nécessaire ou nous
 Ils sont les garants de la qualité pédagogique et ludique de nos ***REMOVED***. Merci à eux !">
 {% endblock %}
 
-{% block title %}Ludo et Sophie - Découvrez toute l'équipe des petits éclaireurs
+{% block title %}Découvrez toute l'équipe des petits éclaireurs - Ludo et Sophie
 {% endblock %}
 
 {% block body %}
