--- a/templates/home/category.html.twig
+++ b/templates/home/category.html.twig
@@ -1,18 +1,29 @@
 {% extends 'base.html.twig' %}
 
 {% block head %}
-	
-	{% if category.metaTagDescription is defined %}
-		<meta name="description" content="{{ category.metaTagDescription }}">
-	{% endif %}
+{# Facebook #}
+<meta property="og:title" content="{{ category.metaTagTitle ?? '' }}">
+<meta property="og:description" content="{{ category.metaTagDescription ?? '' }}">
+<meta property="og:url" content="{{ url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) }}">
+<meta property="og:type" content="article">
+{# Fin Facebook #}
+
+{# Twitter #}
+<meta property="twitter:title" content="{{ category.metaTagTitle ?? '' }}">
+<meta property="twitter:description" content="{{ category.metaTagDescription ?? '' }}">
+<meta property="twitter:url" content="{{ url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) }}">
+{# Fin Twitter #}
+
+<meta name="description" content="{{ category.metaTagDescription ?? '' }}">
 {% endblock %}
 
 
-{% block title %}Ludo et Sophie -
-	{{ category.metaTagTitle ?? '' }} -
-	{% for metaTagKeyword in category.metaTagKeywords %}
+{% block title %}
+	{# {% for metaTagKeyword in category.metaTagKeywords %}
 		{{ metaTagKeyword }} -
-	{% endfor %}
+	{% endfor %} #}
+	{{ category.metaTagTitle ?? '' }} -
+	Ludo et Sophie
 {% endblock %}
 
 {% block body %}
