--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,66 @@
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         {% block stylesheets %}{% endblock %}
 
+        {# schema.org #}
+        <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "EducationalOrganization",
+            "name": "Ludo & Sophie",
+            "description": "Ludo & Sophie organise depuis 2016 à Paris, Dijon et Nantes, des activités ludiques et culturelles passionnantes pour les FAMILLES et SCOLAIRES !",
+            "image": "{{ asset('images/icones/header_logo-300x300.jpg') }}",
+            "logo": "{{ asset('images/icones/logo_footer.jpg') }}",
+            "url": "{{ url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) }}",
+            "telephone": "06 74 97 39 03",
+            "sameAs": [
+                "https://twitter.com/ludo_et_sophie",
+                "https://fr.linkedin.com/company/ludo&sophie",
+                "https://fr-fr.facebook.com/LudoetSophieParis",
+                "https://www.instagram.com/ludoetsophie",
+                "https://www.pinterest.fr/pin/307441112063894353"
+            ],
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "49 rue de Ponthieu",
+                "addressLocality": "Paris",
+                "postalCode": "75008",
+                "addressCountry": "France"
+            }
+        }
+        </script>
+        {# schema.org #}
+
+        <!-- Google Analytics -->
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview');
+        </script>
+        <!-- End Google Analytics -->
+        
+        <!-- Facebook Pixel Code -->
+        <script>
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '{your-pixel-id-goes-here}');
+            fbq('track', 'PageView');
+        </script>
+        <noscript>
+            <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id={your-pixel-id-goes-here}&ev=PageView&noscript=1"/>
+        </noscript>
+        <!-- End Facebook Pixel Code -->
+
+
+        
     </head>
     <body>
 
