id google analytics et facebook pixel code

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,11 +76,11 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('create', 'UA-91366788-1', 'auto');
         ga('send', 'pageview');
         </script>
         <!-- End Google Analytics -->
-        
+
         <!-- Facebook Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
@@ -91,11 +91,11 @@
             t.src=v;s=b.getElementsByTagName(e)[0];
             s.parentNode.insertBefore(t,s)}(window, document,'script',
             'https://connect.facebook.net/en_US/fbevents.js');
-            fbq('init', '{your-pixel-id-goes-here}');
+            fbq('init', '1704458469821345');
             fbq('track', 'PageView');
         </script>
         <noscript>
-            <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id={your-pixel-id-goes-here}&ev=PageView&noscript=1"/>
+            <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1704458469821345&ev=PageView&noscript=1"/>
         </noscript>
         <!-- End Facebook Pixel Code -->
 
